app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil42
  namespace: dev
spec:
  selector:
    app: wil42
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
