app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wil42-ingress
  namespace: dev
spec:
  rules:
  - host: wil42.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wil42
            port:
              number: 8888
